# CALDISS_cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: README.md  main.py  pyproject.toml  setup.sh  test.py
{{cookiecutter.project_slug}}/Shared_Functions/: pipeline_generator.py
