[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "This is a dummy project setup using uv. Use as reference for other CALDISS projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[project.scripts]
create-pipeline = "Shared_Functions.pipeline_generator:main"

[tool.setuptools]
packages = ["Shared_Functions"]